--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                             <h3>Ngày lễ đính hôn</h3>
                                             <h6>18/08/2023</h6>
                                         </div>
-                                        <p class="wow fadeInRight">&quot; Vào 1 ngày đẹp trời tháng Chín, hai gia đình
+                                        <p class="wow fadeInRight">&quot; Vào 1 ngày đẹp trời tháng Tám, hai gia đình
                                             chúng mình gặp nhau và trao nhau chục trầu thật xinh đẹp.&quot;</p>
                                     </div>
                                 </div>
@@ -1138,7 +1138,7 @@
     <section id="rsvp" class="rsvp">
         <div class="rsvp-widgets">
             <div class="section-title wow fadeInDown">
-                <h2>SỔ LƯU BÚT</h2>
+                <h2>Mừng cưới</h2>
             </div>
             <div class="container">
                 <div class="row">
