--- a/index.html
+++ b/index.html
@@ -80,11 +80,7 @@
                         </li>
 
                         <li class="active">
-                            <a href="#rsvp">Lời chúc</a>
-                        </li>
-
-                        <li class="active">
-                            <a href="javascript:void(0)" class="buttonDonate">Mừng cưới</a>
+                            <a href="#rsvp">Quà cưới</a>
                         </li>
                     </ul>
                 </div>
@@ -1138,64 +1134,38 @@
     <section id="rsvp" class="rsvp">
         <div class="rsvp-widgets">
             <div class="section-title wow fadeInDown">
-                <h2>Mừng cưới</h2>
+                <h2>Quà cưới</h2>
             </div>
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="latest-posts-widget widget widget-rsvp wow fadeIn">
-                            <div class="ft-about-content">
-                                <h4 class="widget-title cursive">Cảm ơn bạn rất nhiều vì đã gửi những lời chúc mừng tốt
-                                    đẹp nhất đến đám cưới của chúng tôi!</h4>
-                                <form id="wish-form" class="form validate-rsvp-form row" method="post">
-                                    <div class="col col-sm-12" style="margin-bottom:20px;">
-                                        <input type="text" name="name" class="form-control mb-0"
-                                            style="margin-bottom:4px;" placeholder="Nhập họ tên*">
-                                    </div>
-                                    <div class="col col-sm-12">
-                                        <input type="email" name="email" class="form-control" placeholder="Nhập email">
-                                    </div>
-                                    <div class="col col-sm-12" style="margin-bottom:20px;">
-                                        <textarea class="form-control" name="content" style="margin-bottom:4px;"
-                                            placeholder="Nhập lời chúc của bạn*"></textarea>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">Gửi lời chúc</button>
-                                </form>
+                <div class="container-qr">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="donate-box">
+                                <div class="donate-card">
+                                    <h3>Mừng cưới đến chú rể</h3>
+                                    <img class="qr-code-image" src="images/namqr.jpg">
+                                    <p>Ngân hàng: <strong> ACB</strong></p>
+                                    <p>Tên tài khoản: <strong>TRAN PHUONG NAM</strong></p>
+                                    <p>Số tài khoản: <strong>26072217</strong></p>
+                                    <p>Chi nhánh: <strong>Hà Thành</strong></p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="wish-box ft-about-content">
-                            <div class="wish-box-item ">
-                                <strong>Em Tiến</strong>
-                                <p>Chúc mừng anh chị tất cả !!</p>
-                            </div>
-                            <div class="wish-box-item bg">
-                                <strong>Thùy Dương</strong>
-                                <p>Duyên đến với 2 bạn là duyên vợ chồng. Chúc cho cầu nối này của 2 bạn đi đến hết cuộc
-                                    đời này!</p>
-                            </div>
-                            <div class="wish-box-item ">
-                                <strong>Bác Hải</strong>
-                                <p>Chúc 2 cháu hạnh phúc
-                                    Đầu bạc răng long
-                                    Con cháu đầy đàn!!</p>
-                            </div>
-                            <div class="wish-box-item bg">
-                                <strong>TPN</strong>
-                                <p>&quot;Một cuộc hôn nhân thành công đòi hỏi phải yêu nhiều lần, và luôn ở cùng một
-                                    người&quot; - Chúc cho hai bạn sẽ có được một cuộc hôn nhân viên mãn, trăm năm hạnh
-                                    phúc!</p>
-                            </div>
-                            <div class="wish-box-item ">
-                                <strong>Bác Hòa</strong>
-                                <p>Chúc 2 cháu trăm năm hạnh phúc
-                                    Đầu bạc răng long
-                                    </p>
+                        <div class="col-md-6">
+                            <div class="donate-box">
+                                <div class="donate-card">
+                                    <h3>Mừng cưới đến cô dâu</h3>
+                                    <img class="qr-code-image" src="images/lyqr.jpg">
+                                    <p>Ngân hàng: <strong>ACB</strong></p>
+                                    <p>Tên tài khoản: <strong>CAO THI KHANH LY</strong></p>
+                                    <p>Số tài khoản: <strong>19265557</strong></p>
+                                    <p>Chi nhánh: <strong>Hà Thành</strong></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                
             </div>
         </div>
     </section>
@@ -1242,7 +1212,7 @@
                     <div class="donate-card">
                         <h3>Mừng cưới đến chú rể</h3>
                         <img class="qr-code-image"
-                            src="https://cdn.biihappy.com/ziiweb/website/6545a786a61009837e0be0b9/81539d18126de621a974901eb3ac96ad.jpeg">
+                            src="images/namqr.jpg">
                         <p>Ngân hàng: <strong> ACB</strong></p>
                         <p>Tên tài khoản: <strong>TRAN PHUONG NAM</strong></p>
                         <p>Số tài khoản: <strong>26072217</strong></p>
@@ -1252,7 +1222,7 @@
                     <div class="donate-card">
                         <h3>Mừng cưới đến cô dâu</h3>
                         <img class="qr-code-image"
-                            src="https://cdn.biihappy.com/ziiweb/website/6545a786a61009837e0be0b9/9badd09498f2e8d820fc6dfb33869d27.jpeg">
+                            src="images/lyqr.jpg">
                         <p>Ngân hàng: <strong>ACB</strong></p>
                         <p>Tên tài khoản: <strong>CAO THI KHANH LY</strong></p>
                         <p>Số tài khoản: <strong>19265557</strong></p>
