--- a/index.html
+++ b/index.html
@@ -25,23 +25,25 @@
         href="css/responsive.css">
     <link href="css/plugin.css" rel="stylesheet"
         type="text/css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link href="css/dosis.css" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K9L0ZFE1PJ"></script>
+    <!-- <link href="css/vibes.css" rel="stylesheet"> -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-K9L0ZFE1PJ"></script> -->
     <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-K9L0ZFE1PJ');</script>
 </head>
 
 <body data-spy="scroll" data-target=".navbar-fixed-top" class="home-3">
-    <div class="preloader-area">
+    <!-- <div class="preloader-area">
         <div class="loader loader-13">
             <div class="css-heart heart1"></div>
             <div class="css-heart heart2"></div>
             <div class="css-heart heart3"></div>
             <div class="css-heart heart4"></div>
         </div>
-    </div>
+    </div> -->
     <header id="inner-navigation">
         <nav class="navbar navbar-default navbar-fixed-top navbar-sticky-function navbar-arrow">
             <div class="container">
@@ -136,10 +138,10 @@
     </section>
 
 
-    <section id="about-us" class="section-padding" style="height:100%">
+    <section id="about-us" class="section-padding pb-0" style="height:100%">
         <div class="container">
             <div class="section-title wow fadeInDown">
-                <h2>Cặp đôi</h2>
+                <h2>Đôi Uyên Ương</h2>
             </div>
             <div class="row">
                 <div class="col-md-6 col-sm-12">
@@ -210,41 +212,6 @@
             </div>
         </div>
     </section>
-
-    <section class="section-accessibilities">
-        <div class="container">
-            <div class="row button-accessibilities">
-                <div class="col col-lg-12">
-                    <div class="text-center btn-container">
-                        <a href="#rsvp" class="accessibility-btn album btn section-button">
-                            <span class="content-button">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-chat" viewBox="0 0 16 16">
-                                    <path
-                                        d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
-                                </svg>
-                                Gửi lời chúc
-                            </span>
-                        </a>
-                        <a href="javascript:void(0)" class="accessibility-btn album btn section-button buttonDonate">
-                            <span class="content-button">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-coin" viewBox="0 0 16 16">
-                                    <path
-                                        d="M5.5 9.511c.076.954.83 1.697 2.182 1.785V12h.6v-.709c1.4-.098 2.218-.846 2.218-1.932 0-.987-.626-1.496-1.745-1.76l-.473-.112V5.57c.6.068.982.396 1.074.85h1.052c-.076-.919-.864-1.638-2.126-1.716V4h-.6v.719c-1.195.117-2.01.836-2.01 1.853 0 .9.606 1.472 1.613 1.707l.397.098v2.034c-.615-.093-1.022-.43-1.114-.9H5.5zm2.177-2.166c-.59-.137-.91-.416-.91-.836 0-.47.345-.822.915-.925v1.76h-.005zm.692 1.193c.717.166 1.048.435 1.048.91 0 .542-.412.914-1.135.982V8.518l.087.02z" />
-                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                                    <path
-                                        d="M8 13.5a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm0 .5A6 6 0 1 0 8 2a6 6 0 0 0 0 12z" />
-                                </svg>
-                                Mừng cưới
-                            </span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
     <section id="our-story" class="story-bg section-padding">
         <div class="container">
