--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:site_name" content="Phương Nam &amp; Khánh Ly">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Phương Nam &amp; Khánh Ly">
-    <meta property="og:url" content="https://tuananhmai.iwedding.info">
+    <!-- <meta property="og:url" content="https://tuananhmai.iwedding.info"> -->
     <meta property="og:description"
         content="Tình yêu đích thực đứng về phía nhau trong những ngày tốt đẹp và sát cánh hơn trong những ngày tồi tệ">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.PNG">
@@ -114,7 +114,7 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="slide-inner slide-bg-image"
-                        data-background="images/VIP_8245.JPG">
+                        data-background="images/img/img25.jpg">
                     </div>
                 </div>
 
@@ -391,7 +391,7 @@
                 <div class="col-sm-8 col-xs-12">
                     <div class="count-titles wow fadeInDown">
                         <h2>Ngày thành hôn</h2>
-                        <div id="clock" data-date="2023-11-18" data-text-day="Ngày" data-text-hour="Giờ"
+                        <div id="clock" data-date="2024-01-07" data-text-day="Ngày" data-text-hour="Giờ"
                             data-text-minute="Phút" data-text-second="Giây"></div>
                     </div>
                 </div>
@@ -450,9 +450,7 @@
                                         <div class="atcb">
                                             {
                                             "name":"Lễ Nạp tài (Đám cưới Phương Nam và Khánh Ly)",
-                                            "description":"Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!.
-                                            Thông tin chi tiết xem tại
-                                            website:<br>[url]https://tuananhmai.iwedding.info[/url]",
+                                            "description":"Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!",
                                             "startDate":"07-01-2024",
                                             "endDate":"07-01-2024",
                                             "startTime":"07:00 AM",
@@ -497,9 +495,7 @@
                                         <div class="atcb">
                                             {
                                             "name":"TIỆC CƯỚI NHÀ GÁI (Đám cưới Phương Nam và Khánh Ly)",
-                                            "description":"Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!.
-                                            Thông tin chi tiết xem tại
-                                            website:<br>[url]https://tuananhmai.iwedding.info[/url]",
+                                            "description":"Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!.",
                                             "startDate":"06-01-2024",
                                             "endDate":"06-01-2024",
                                             "startTime":"17:00 PM",
@@ -544,9 +540,7 @@
                                         <div class="atcb">
                                             {
                                             "name":"LỄ CƯỚI NHÀ TRAI (Đám cưới Phương Nam và Khánh Ly)",
-                                            "description":"Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!.
-                                            Thông tin chi tiết xem tại
-                                            website:<br>[url]https://tuananhmai.iwedding.info[/url]",
+                                            "description":"Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!.",
                                             "startDate":"01-07-2024",
                                             "endDate":"01-07-2024",
                                             "startTime":"11:30 AM",
@@ -591,9 +585,7 @@
                                         <div class="atcb">
                                             {
                                             "name":"TIỆC CƯỚI NHÀ TRAI (Đám cưới Phương Nam và Khánh Ly)",
-                                            "description":"Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!.
-                                            Thông tin chi tiết xem tại
-                                            website:<br>[url]https://tuananhmai.iwedding.info[/url]",
+                                            "description":"Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!.",
                                             "startDate":"01-07-2024",
                                             "endDate":"01-07-2024",
                                             "startTime":"12:30 PM",
@@ -628,10 +620,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="quote-img">
+                    <div class="quote-img wow fadeInLeft">
                         <a href="https://www.youtube.com/watch?v=aZOUDd7aL2g" target="_blank" class="play-video">
                             <img
-                            src="images/img/img47.JPG">
+                            src="images/img/img47.JPG" class="ic-main">
+                            <!-- <img src="images/ic-yt.png" class="ic-yt" alt=""> -->
                         </a>
                     </div>
                 </div>
@@ -646,7 +639,7 @@
             </div>
         </div>
         <div class="seperator">
-            <img src="https://tuananhmai.iwedding.info/templates/template18/images/body/layer-3.png" alt="seperator">
+            <img src="images/layer-3.png" alt="seperator">
         </div>
     </section>
 
@@ -829,9 +822,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img25.jpg"
+                        <a href="images/VIP_8245.JPG"
                             title="">
-                            <img src="images/img/img25.jpg"
+                            <img src="images/VIP_8245.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -1050,7 +1043,7 @@
                 <div class="container-qr">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="donate-box">
+                            <div class="donate-box wow fadeInLeft">
                                 <div class="donate-card">
                                     <h3>Mừng cưới đến chú rể</h3>
                                     <img class="qr-code-image" src="images/namqr.jpg">
@@ -1062,7 +1055,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="donate-box">
+                            <div class="donate-box wow fadeInRight">
                                 <div class="donate-card">
                                     <h3>Mừng cưới đến cô dâu</h3>
                                     <img class="qr-code-image" src="images/lyqr.jpg">
@@ -1081,7 +1074,7 @@
     </section>
 
     <footer id="footer" class="footer-widgets"
-        style="background-image: url('images/img/img20.JPG');background-repeat: no-repeat;background-size: cover;background-position: bottom;background-attachment: fixed;width:100%">
+        style="background-image: url('images/img/img20.JPG');background-repeat: no-repeat;background-size: cover;background-position: center;background-attachment: fixed;width:100%">
         <div class="footer-note">
             <h1>Thanh you!</h1>
             <p>Phương Nam &amp; Khánh Ly</p>
@@ -1102,49 +1095,8 @@
             </div>
         </div>
     </footer>
-    <div id="donate-modal" class="donate-modal">
-        <div class="donate-modal-content">
-            <div class="donate-modal-header">
-                <span class="donate-modal-close">&times;</span>
-                <strong>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
-                        class="bi bi-coin" viewBox="0 0 16 16">
-                        <path
-                            d="M5.5 9.511c.076.954.83 1.697 2.182 1.785V12h.6v-.709c1.4-.098 2.218-.846 2.218-1.932 0-.987-.626-1.496-1.745-1.76l-.473-.112V5.57c.6.068.982.396 1.074.85h1.052c-.076-.919-.864-1.638-2.126-1.716V4h-.6v.719c-1.195.117-2.01.836-2.01 1.853 0 .9.606 1.472 1.613 1.707l.397.098v2.034c-.615-.093-1.022-.43-1.114-.9H5.5zm2.177-2.166c-.59-.137-.91-.416-.91-.836 0-.47.345-.822.915-.925v1.76h-.005zm.692 1.193c.717.166 1.048.435 1.048.91 0 .542-.412.914-1.135.982V8.518l.087.02z" />
-                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                        <path d="M8 13.5a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm0 .5A6 6 0 1 0 8 2a6 6 0 0 0 0 12z" />
-                    </svg>
-                    <span>Hộp mừng cưới</span>
-                </strong>
-            </div>
-            <div class="donate-modal-body">
-                <div class="donate-box">
-                    <div class="donate-card">
-                        <h3>Mừng cưới đến chú rể</h3>
-                        <img class="qr-code-image"
-                            src="images/namqr.jpg">
-                        <p>Ngân hàng: <strong> ACB</strong></p>
-                        <p>Tên tài khoản: <strong>TRAN PHUONG NAM</strong></p>
-                        <p>Số tài khoản: <strong>26072217</strong></p>
-                        <p>Chi nhánh: <strong>Hà Thành</strong></p>
-
-                    </div>
-                    <div class="donate-card">
-                        <h3>Mừng cưới đến cô dâu</h3>
-                        <img class="qr-code-image"
-                            src="images/lyqr.jpg">
-                        <p>Ngân hàng: <strong>ACB</strong></p>
-                        <p>Tên tài khoản: <strong>CAO THI KHANH LY</strong></p>
-                        <p>Số tài khoản: <strong>19265557</strong></p>
-                        <p>Chi nhánh: <strong>Hà Thành</strong></p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <script type="text/javascript">
-    	const biicore = {template_id: '', templatePremium: ('0' === '1'), themeRoot:'', webroot : '', coreSite: '', webToken: '', isPremium: ('1' === '1'), bgMusic: 'music/MarryYou-BrunoMars-6450059.mp3', alert: JSON.parse('[]'), effect: JSON.parse('{\"type\":\"custom\",\"setting\":{\"icon\":\"https:\\/\\/cdn.biihappy.com\\/ziiweb\\/wedding-snows\\/25.png\",\"number\":\"35\",\"speed\":\"3\",\"minSize\":\"15\",\"maxSize\":\"32\"}}')};
+    	const biicore = {template_id: '', templatePremium: ('0' === '1'), themeRoot:'', webroot : '', coreSite: '', webToken: '', isPremium: ('1' === '1'), bgMusic: 'music/MarryYou-BrunoMars-6450059.mp3', alert: JSON.parse('[]'), effect: JSON.parse('{\"type\":\"custom\",\"setting\":{\"icon\":\"images\\/25.png\",\"number\":\"35\",\"speed\":\"3\",\"minSize\":\"15\",\"maxSize\":\"32\"}}')};
     </script>
     <script src="js/jquery-plugin-collection.js"></script>
     <script src="js/calendar.js"></script>
