--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="slide-inner slide-bg-image"
-                        data-background="images/img/img25.jpg">
+                        data-background="images/img/img25.JPG">
                     </div>
                 </div>
 
@@ -671,9 +671,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img24.jpg"
+                        <a href="images/img/img24.JPG"
                             title="">
-                            <img src="images/img/img24.jpg"
+                            <img src="images/img/img24.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -681,9 +681,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img39.jpg"
+                        <a href="images/img/img39.JPG"
                             title="">
-                            <img src="images/img/img39.jpg"
+                            <img src="images/img/img39.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -692,9 +692,9 @@
                 
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img15.jpg"
+                        <a href="images/img/img15.JPG"
                             title="">
-                            <img src="images/img/img15.jpg"
+                            <img src="images/img/img15.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -702,9 +702,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img31.jpg"
+                        <a href="images/img/img31.JPG"
                             title="">
-                            <img src="images/img/img31.jpg"
+                            <img src="images/img/img31.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -712,9 +712,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img35.jpg"
+                        <a href="images/img/img35.JPG"
                             title="">
-                            <img src="images/img/img35.jpg"
+                            <img src="images/img/img35.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -722,9 +722,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img26.jpg"
+                        <a href="images/img/img26.JPG"
                             title="">
-                            <img src="images/img/img26.jpg"
+                            <img src="images/img/img26.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -742,9 +742,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img20.jpg"
+                        <a href="images/img/img20.JPG"
                             title="">
-                            <img src="images/img/img20.jpg"
+                            <img src="images/img/img20.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -762,9 +762,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img28.jpg"
+                        <a href="images/img/img28.JPG"
                             title="">
-                            <img src="images/img/img28.jpg"
+                            <img src="images/img/img28.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -802,9 +802,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img38.jpg"
+                        <a href="images/img/img38.JPG"
                             title="">
-                            <img src="images/img/img38.jpg"
+                            <img src="images/img/img38.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -842,9 +842,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img33.jpg"
+                        <a href="images/img/img33.JPG"
                             title="">
-                            <img src="images/img/img33.jpg"
+                            <img src="images/img/img33.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -862,9 +862,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img13.jpg"
+                        <a href="images/img/img13.JPG"
                             title="">
-                            <img src="images/img/img13.jpg"
+                            <img src="images/img/img13.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -872,9 +872,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img30.jpg"
+                        <a href="images/img/img30.JPG"
                             title="">
-                            <img src="images/img/img30.jpg"
+                            <img src="images/img/img30.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -892,9 +892,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img37.jpg"
+                        <a href="images/img/img37.JPG"
                             title="">
-                            <img src="images/img/img37.jpg"
+                            <img src="images/img/img37.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -902,9 +902,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img12.jpg"
+                        <a href="images/img/img12.JPG"
                             title="">
-                            <img src="images/img/img12.jpg"
+                            <img src="images/img/img12.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -932,9 +932,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img29.jpg"
+                        <a href="images/img/img29.JPG"
                             title="">
-                            <img src="images/img/img29.jpg"
+                            <img src="images/img/img29.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -942,9 +942,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img16.jpg"
+                        <a href="images/img/img16.JPG"
                             title="">
-                            <img src="images/img/img16.jpg"
+                            <img src="images/img/img16.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -952,9 +952,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img11.jpg"
+                        <a href="images/img/img11.JPG"
                             title="">
-                            <img src="images/img/img11.jpg"
+                            <img src="images/img/img11.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -962,9 +962,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img14.jpg"
+                        <a href="images/img/img14.JPG"
                             title="">
-                            <img src="images/img/img14.jpg"
+                            <img src="images/img/img14.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -972,9 +972,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img27.jpg"
+                        <a href="images/img/img27.JPG"
                             title="">
-                            <img src="images/img/img27.jpg"
+                            <img src="images/img/img27.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -982,9 +982,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img34.jpg"
+                        <a href="images/img/img34.JPG"
                             title="">
-                            <img src="images/img/img34.jpg"
+                            <img src="images/img/img34.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -992,9 +992,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img36.jpg"
+                        <a href="images/img/img36.JPG"
                             title="">
-                            <img src="images/img/img36.jpg"
+                            <img src="images/img/img36.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -1002,9 +1002,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img32.jpg"
+                        <a href="images/img/img32.JPG"
                             title="">
-                            <img src="images/img/img32.jpg"
+                            <img src="images/img/img32.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -1012,9 +1012,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img17.jpg"
+                        <a href="images/img/img17.JPG"
                             title="">
-                            <img src="images/img/img17.jpg"
+                            <img src="images/img/img17.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
@@ -1022,9 +1022,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img19.jpg"
+                        <a href="images/img/img19.JPG"
                             title="">
-                            <img src="images/img/img19.jpg"
+                            <img src="images/img/img19.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
