optimize hình ảnh

--- a/index.html
+++ b/index.html
@@ -822,9 +822,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/VIP_8245.JPG"
+                        <a href="images/img/VIP_8245.jpg"
                             title="">
-                            <img src="images/VIP_8245.JPG"
+                            <img src="images/img/VIP_8245.jpg"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
