--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                             <div class="col-sm-6 col-xs-12">
                                 <div class="story-lt-rt story-lt">
                                     <div class="image-story">
-                                        <img src="images/img/img41.JPG"
+                                        <img src="images/img/img41.jpg"
                                             alt="">
                                     </div>
                                 </div>
@@ -369,7 +369,7 @@
                             <div class="col-sm-6 col-xs-6">
                                 <div class="story-lt-rt story-lt">
                                     <div class="image-story">
-                                        <img src="images/img/img41.JPG"
+                                        <img src="images/img/img41.jpg"
                                             alt="">
                                     </div>
                                 </div>
@@ -520,7 +520,7 @@
                                 <div class="col-12 col-sm-12 col-md-5">
                                     <div class="image-wrap">
                                         <img class="event-image"
-                                            src="images/img/img45.JPG"
+                                            src="images/img/img45.jpg"
                                             alt="LỄ CƯỚI NHÀ TRAI">
                                     </div>
                                 </div>
@@ -782,9 +782,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item">
                     <div class="item port-popup">
-                        <a href="images/img/img18.jpg"
+                        <a href="images/img/img18.JPG"
                             title="">
-                            <img src="images/img/img18.jpg"
+                            <img src="images/img/img18.JPG"
                                 alt="">
                             <i class="fa fa-search"></i>
                         </a>
