--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div id="navbar" class="navbar-nav-wrapper pull-right">
                     <ul class="nav navbar-nav navbar-right" id="responsive-menu">
                         <li class="active">
-                            <a href="#wd-banner">Trang chủ</a>
+                            <a href="#wd-banner">Nam Ly</a>
                         </li>
 
 
@@ -69,7 +69,7 @@
 
                         </li>
                         <li class="active">
-                            <a href="#our-story">Chuyện tình yêu</a>
+                            <a href="#our-story">Hành trình yêu thương</a>
                         </li>
 
                         <li class="active">
@@ -168,10 +168,7 @@
 
 
                             <div class="cp-detail">
-                                <p class="ar">là chồng cô dâu...<a class="button-see" tabindex="0" data-trigger="focus"
-                                        role="button" data-toggle="popover" data-placement="bottom"
-                                        data-content="là chồng cô dâu" style="font-size:14px;cursor: pointer">Xem thêm<i
-                                            class="bi bi-arrow-down-short"></i></a></p>
+                                <p class="ar">là chồng cô dâu...</p>
                             </div>
                         </div>
                     </div>
@@ -199,10 +196,7 @@
 
                             <div class="cp-detail">
 
-                                <p class="al">là vợ chú rể
-                                    ...<a class="button-see" tabindex="0" data-trigger="focus" role="button"
-                                        data-toggle="popover" data-placement="bottom" data-content="là vợ chú rể
-" style="font-size:14px;cursor: pointer">Xem thêm<i class="bi bi-arrow-down-short"></i></a></p>
+                                <p class="al">là vợ chú rể</p>
                             </div>
                         </div>
                     </div>
@@ -216,7 +210,7 @@
     <section id="our-story" class="story-bg section-padding">
         <div class="container">
             <div class="section-title wow fadeInDown">
-                <h2>Chuyện tình yêu</h2>
+                <h2>Hành trình yêu thương</h2>
             </div>
             <div class="story-timeline">
                 <div class="row">
@@ -254,18 +248,14 @@
                                             <h3>Lời tỏ tình dễ thương^^</h3>
                                             <h6>24/08/2021</h6>
                                         </div>
-                                        <p class="wow fadeInLeft">&quot; Chúng mình từ những người bạn thân, dần dần cả
-                                            2 đã dành tình cảm cho nhau sau những lần đi chơi. Anh đã thổ lộ tình cảm
-                                            với mình và mình từ chối anh bởi mình lo lắng sẽ đánh mất tình bạn đẹp này.
-                                            Và rồi, bằng sự kiên trì và chân thành của anh, mình đã nghe theo con tim
-                                            mách bảo&quot;</p>
+                                        <p class="wow fadeInLeft">&quot;Anh muốn nói với em một câu, mà từ rất lâu anh chưa dám nói ra, nhưng hôm nay không nói, thì nhất định sau này không nói được:<br/> Đi đi kẻo lỡ đèn xanh. Yêu đi kẻo lỡ tình anh bây giờ ^^ &quot;</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-xs-12">
                                 <div class="story-lt-rt story-rt">
                                     <div class="image-story">
-                                        <img src="images/img/img40.JPG"
+                                        <img src="images/img/img54.jpg"
                                             alt="">
                                     </div>
                                 </div>
@@ -277,7 +267,7 @@
                             <div class="col-sm-6 col-xs-12">
                                 <div class="story-lt-rt story-lt">
                                     <div class="image-story">
-                                        <img src="images/img/img51.jpg"
+                                        <img src="images/img/img55.jpg"
                                             alt="">
                                     </div>
                                 </div>
@@ -286,7 +276,7 @@
                                 <div class="story-lt-rt story-rt">
                                     <div class="expand-story">
                                         <div class="story-head wow fadeIn">
-                                            <h3>Ngày lễ đính hôn</h3>
+                                            <h3>Ngày lễ dạm ngõ</h3>
                                             <h6>18/08/2023</h6>
                                         </div>
                                         <p class="wow fadeInRight">&quot; Vào 1 ngày đẹp trời tháng Tám, hai gia đình
@@ -306,7 +296,7 @@
                                 <div class="story-lt-rt story-rt">
                                     <div class="expand-story">
                                         <div class="story-head wow fadeIn">
-                                            <h3>Chuyện tình yêu</h3>
+                                            <h3>Ngày đầu tiên</h3>
                                             <h6> 01/8/2022</h6>
                                         </div>
                                         <p class="wow fadeInRight">&quot; Tình yêu không chỉ là cảm giác giữa 2 người mà
@@ -334,18 +324,14 @@
                                             <h3>Lời tỏ tình dễ thương^^</h3>
                                             <h6>20/10/2022</h6>
                                         </div>
-                                        <p class="wow fadeInLeft">&quot; Chúng mình từ những người bạn thân, dần dần cả
-                                            2 đã dành tình cảm cho nhau sau những lần đi chơi. Anh đã thổ lộ tình cảm
-                                            với mình và mình từ chối anh bởi mình lo lắng sẽ đánh mất tình bạn đẹp này.
-                                            Và rồi, bằng sự kiên trì và chân thành của anh, mình đã nghe theo con tim
-                                            mách bảo&quot;</p>
+                                        <p class="wow fadeInLeft">&quot; Anh muốn nói với em một câu, mà từ rất lâu anh chưa dám nói ra, nhưng hôm nay không nói, thì nhất định sau này không nói được:<br/> Đi đi kẻo lỡ đèn xanh. Yêu đi kẻo lỡ tình anh bây giờ ^^ &quot;</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-xs-6">
                                 <div class="story-lt-rt story-rt">
                                     <div class="image-story">
-                                        <img src="images/img/img40.JPG"
+                                        <img src="images/img/img54.jpg"
                                             alt="">
                                     </div>
                                 </div>
@@ -358,7 +344,7 @@
                                 <div class="story-lt-rt story-rt">
                                     <div class="expand-story">
                                         <div class="story-head wow fadeIn">
-                                            <h3>Ngày lễ đính hôn</h3>
+                                            <h3>Ngày lễ dạm ngõ</h3>
                                             <h6>24/9/2023</h6>
                                         </div>
                                         <p class="wow fadeInRight">&quot; Vào 1 ngày đẹp trời tháng Chín, hai gia đình
@@ -369,7 +355,7 @@
                             <div class="col-sm-6 col-xs-6">
                                 <div class="story-lt-rt story-lt">
                                     <div class="image-story">
-                                        <img src="images/img/img51.jpg"
+                                        <img src="images/img/img55.jpg"
                                             alt="">
                                     </div>
                                 </div>
@@ -444,7 +430,7 @@
                                     </div>
                                     <p class="text-center-sm"><i class="fa fa-map-marker"></i> Xã Đồng Văn, Huyện Yên
                                         Lạc, Tỉnh Vĩnh Phúc</p>
-                                    <a class="text-center-sm" href="https://maps.app.goo.gl/N7cEHzxXSjdcPg2JA"
+                                    <a class="text-center-sm" href="https://l.messenger.com/l.php?u=https%3A%2F%2Fwww.google.com%2Fmaps%2Fplace%2Fnh%25C3%25A0%2Bm%25C3%25A1y%2Bg%25E1%25BA%25A1ch%2B%25C4%2590o%25C3%25A0n%2BK%25E1%25BA%25BFt%2F%4021.2781696%2C105.5476709%2C18z%2Fdata%3D!4m12!1m5!3m4!2zMjHCsDE2JzQzLjUiTiAxMDXCsDMyJzUyLjgiRQ!8m2!3d21.278736!4d105.547999!3m5!1s0x3134f1ad2d441363%3A0x22d0a00dd4d2d90b!8m2!3d21.2774524!4d105.547427!16s%252Fg%252F11g8vmmrcn%3Fentry%3Dttu&h=AT1Ot3ccUNCfFg6xt9eWrxRjUu8ZO-wp5g-umA3ZqFaMNqNWLAJZDagbqLFenz9S7HTaNaEiwekPqUUajSvaf0FfUTDC2PYhLAADJgOB3BbncfjSACY9NYZosUctIA"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                     <div class="calendar-button">
                                         <div class="atcb">
@@ -489,7 +475,7 @@
                                     </div>
                                     <p class="text-center-sm"><i class="fa fa-map-marker"></i> Xã Đồng Văn, Huyện Yên
                                         Lạc, Tỉnh Vĩnh Phúc</p>
-                                    <a class="text-center-sm" href="https://maps.app.goo.gl/N7cEHzxXSjdcPg2JA"
+                                    <a class="text-center-sm" href="https://l.messenger.com/l.php?u=https%3A%2F%2Fwww.google.com%2Fmaps%2Fplace%2Fnh%25C3%25A0%2Bm%25C3%25A1y%2Bg%25E1%25BA%25A1ch%2B%25C4%2590o%25C3%25A0n%2BK%25E1%25BA%25BFt%2F%4021.2781696%2C105.5476709%2C18z%2Fdata%3D!4m12!1m5!3m4!2zMjHCsDE2JzQzLjUiTiAxMDXCsDMyJzUyLjgiRQ!8m2!3d21.278736!4d105.547999!3m5!1s0x3134f1ad2d441363%3A0x22d0a00dd4d2d90b!8m2!3d21.2774524!4d105.547427!16s%252Fg%252F11g8vmmrcn%3Fentry%3Dttu&h=AT1Ot3ccUNCfFg6xt9eWrxRjUu8ZO-wp5g-umA3ZqFaMNqNWLAJZDagbqLFenz9S7HTaNaEiwekPqUUajSvaf0FfUTDC2PYhLAADJgOB3BbncfjSACY9NYZosUctIA"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                     <div class="calendar-button">
                                         <div class="atcb">
